[package]
name = "turmoil-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-stream = "0.3.5"
async-trait = "0.1.63"
anyhow = "1.0.71"
axum = { version = "0.6.18", default-features = false }
axum_tonic = "0.1.0"
base64 = "0.21.2"
bytes = "1.4.0"
cfg-if = "1.0.0"
chrono = "0.4.23"
chrono-tz = "0.8.2"
csv = "1.2.0"
cursive = "0.20.0"
dashmap = "5.4.0"
derive_more = "0.99.17"
email_address = "0.2.4"
eyre = "0.6.8"
futures = "0.3.27"
getrandom = {version = "0.2.8", features = ["js"] }
google-sheets4 = "5.0.2"
hyper = "*"
ipnet = "2.7.2"
iso8601 = "0.6.1"
itertools = "0.10.5"
linked_hash_set = "0.1.4"
log = "0.4.17"
loom = "0.5.6"
once_cell = "1.17.1"
pin-project = "1"
phonenumber = "0.3.2"
proc-macro2 = "1.0.51"
prost = "0.11.9"
quote = "1.0.23"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rust_decimal = "1.28.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
static_assertions = "1.1.0"
tokio = { version = "1.28.2", default-features = false, features = ["macros"]}
tokio-retry = "0.3"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tower = "0.4.12"
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
turmoil = "0.5.5"
twox-hash = "1.6.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"
tonic = { version = "0.9.2", default-features = false, features = []}
tonic-build = "0.9.2"
tonic-reflection = "0.9.2"
tonic-web-wasm-client = "0.4"
tonic-web = "0.9.2"
url = "2.3.1"

# The repo seems to have moved from https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry
# to https://github.com/tokio-rs/tracing-opentelemetry, but is not yet in a
# compatible state with the latest releases on `opentelemetry` and `opentelemetry-jaeger`.
#
# Therefore, treat these 3 versions as ONE until the maintainers create another
# "good" version set.
#
# (These crates are used in local integration tests with Jaeger/OpenTelemetry/tracing.)
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0" }
tracing-opentelemetry = "0.18.0"
opentelemetry-otlp = { version = "0.11.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = "0.10.0"